# Ez-Game-Audio-Conversion

./: .gitignore  README.md  app.js  audioConvert.js  converter.js  notes.md  package-lock.json  package.json  test-metadata.js
.github/: FUNDING.yml
Ez Game Audio Converter/: .eslintrc.cjs  index.html  package-lock.json  package.json
Ez Game Audio Converter/src/: ActionToggle.module.css  App.css  App.jsx  Router.jsx  SplitButton.Module.css  app.scss  converter.js  main.jsx  styles.css  theme.jsx
Ez Game Audio Converter/src-tauri/: Cargo.toml  tauri.conf.json
Ez Game Audio Converter/src-tauri/icons/: icon.icns
Ez Game Audio Converter/src-tauri/src/: main.rs
Src/: app.js  convertFiles.js  converterWorker.js  createConversionList.js  deleteDuplicateFiles.js  finalize.js  getUserInput.js  package-lock.json  package.json  searchFiles.js  utils.js
Src/ico/: audio-x-generic_36263.icns
logo/: logo.xcf
notes/: notes.md
readmes/: How-to-start.txt  README.html  oldreadme.md
src/: add_context_mene.bat  add_context_menu.bat  config.ini  env.js  exitProgramError.js  metadataService.js  remove_context_menu.bat
src/__tests__/: app.test.js  convertFiles.test.js  converterWorker.test.js  createConversionList.test.js  env.test.js  finalize.test.js  getUserInput.test.js  metadataService.test.js  real_files.test.js  searchFiles.test.js  utils.test.js
src/__tests__/test_files/: error.csv
src/ico/: icon.js
tauri-app/: package-lock.json  package.json
tauri-app/src/: App.tsx  TodoList.tsx
tauri-app/src-tauri/: tauri.conf.json
testaudio/: file1.m4a  file2.m4a
(+75 files in other folders)
