[package]
name = "ez-game-audio-converter"
version = "0.0.1"
description = "Game Audio Conversion"
authors = ["Fug"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
repository = "https://github.com/SpaceFoon/Ez-Game-Audio-Conversion"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
